src/test/deca/context/valid/provided/ContextSansObjet/IdentificationBool.deca
{
	boolean x;
	boolean y = true;
	boolean z = false;
}