src/test/deca/context/invalid/provided/ContextSansObjet/IdentificationIntAssignBool.deca
{
	int x;
	x = true;
	println(x);
}